Fix flex layout broken by white-space: nowrap
Setting a min-width overrides default flexbox behavior that a flex
item can be no smaller than its content

--- a/styles/components/toolbar_secondary.scss
+++ b/styles/components/toolbar_secondary.scss
@@ -62,6 +62,7 @@
     align-items: center;
     width: 100%;
     margin: 0 var(--gin-spacing-m);
+    min-width: 1px; // Fixes broken flex layout due to white-space: nowrap in breadcrumbs.
 
     @include mq(small) {
       margin: 0 var(--gin-spacing-xl);
